--- a/src/app.html
+++ b/src/app.html
@@ -4,10 +4,15 @@
 <head>
   <meta charset="utf-8">
   <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐈</text></svg>">
+    href="https://images.microcms-assets.io/assets/99c53a99ae2b4682938f6c435d83e3d9/00eec022d8b34fe09083aba72961c2e1/cat_flat.webp?w=32&h=32">
   <meta name="viewport" content="width=device-width">
   <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff">
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000">
+  <link rel="apple-touch-icon"
+    href="https://images.microcms-assets.io/assets/99c53a99ae2b4682938f6c435d83e3d9/00eec022d8b34fe09083aba72961c2e1/cat_flat.webp?w=180&h=180">
   %sveltekit.head%
 </head>
 
