アイコンを更新する

--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="icon"
-    href="https://images.microcms-assets.io/assets/99c53a99ae2b4682938f6c435d83e3d9/00eec022d8b34fe09083aba72961c2e1/cat_flat.webp?w=32&h=32">
+    href="https://images.microcms-assets.io/assets/99c53a99ae2b4682938f6c435d83e3d9/4a2fadaa79a944abb8895920573b9a79/cat_flat.png?w=32&h=32">
   <meta name="viewport" content="width=device-width">
   <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
@@ -12,7 +12,7 @@
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff">
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000">
   <link rel="apple-touch-icon"
-    href="https://images.microcms-assets.io/assets/99c53a99ae2b4682938f6c435d83e3d9/00eec022d8b34fe09083aba72961c2e1/cat_flat.webp?w=180&h=180">
+    href="https://images.microcms-assets.io/assets/99c53a99ae2b4682938f6c435d83e3d9/4a2fadaa79a944abb8895920573b9a79/cat_flat.png?w=180&h=180">
   %sveltekit.head%
 </head>
 
