--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,8 @@
   <link rel="icon"
     href="https://images.microcms-assets.io/assets/99c53a99ae2b4682938f6c435d83e3d9/ca63de19468e45b2833ebf325dbfd56c/Microsoft-Fluentui-Emoji-3d-Cat-3d.1024.png?w=32&h=32">
   <meta name="viewport" content="width=device-width">
-  <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+  <link rel="preload" as="style" href="%sveltekit.assets%/css/pico-bootstrap-grid.min.css">
+  <link rel="stylesheet" href="%sveltekit.assets%/css/pico-bootstrap-grid.min.css">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff">
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000">
