--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" data-theme="dark">
+<html lang="ja" data-theme="dracula">
 
 <head>
   <meta charset="utf-8">
@@ -13,8 +13,8 @@
   %sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover">
-  <div style="display: contents">%sveltekit.body%</div>
+<body data-sveltekit-preload-data="hover" class="bg-base-300">
+  <div class="contents">%sveltekit.body%</div>
 </body>
 
 </html>
