Cloudflare Web Analyticsを追加する

--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,9 @@
 
 <body data-sveltekit-preload-data="hover" class="bg-base-300">
   <div class="contents">%sveltekit.body%</div>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "c76aace8d0a6496fa968e338d26f0866"}'></script>
+  <!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
