画像APIを使わない

--- a/src/app.html
+++ b/src/app.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="alternate" type="application/rss+xml" title="nagutabbyの考え事" href="/atom.xml" />
   <link rel="icon"
-    href="https://images.microcms-assets.io/assets/99c53a99ae2b4682938f6c435d83e3d9/ca63de19468e45b2833ebf325dbfd56c/Microsoft-Fluentui-Emoji-3d-Cat-3d.1024.png?w=32&h=32">
+    href="/images/Microsoft-Fluentui-Emoji-3d-Cat-3d.32.png">
   <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon"
-    href="https://images.microcms-assets.io/assets/99c53a99ae2b4682938f6c435d83e3d9/ca63de19468e45b2833ebf325dbfd56c/Microsoft-Fluentui-Emoji-3d-Cat-3d.1024.png?w=180&h=180">
+    href="/images/Microsoft-Fluentui-Emoji-3d-Cat-3d.180.png">
   %sveltekit.head%
 </head>
 
